--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "dataday-vuevite",
+  "name": "@datadayrepos/icons",
   "type": "module",
   "version": "0.0.1-beta.1",
   "private": false,
   "license": "Propriatory",
-  "exports": {
-
-  },
-  "main": "main.js",
-
+  "exports": "./exports.json",
   "scripts": {
+    "build-icons": "node build-icons.cjs",
+    "prebuild": "npm run build-icons",
     "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "build": "pnpm run build-icons && vue-tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint --cache .",
     "lint:fix": "eslint . --fix",
@@ -21,12 +19,12 @@
   "peerDependencies": {
     "vue": "3.3.4"
   },
-
   "devDependencies": {
     "@datadayrepos/eslint-config": "^1.0.1-beta.11",
     "@datadayrepos/eslint-plugin-datadayrepos": "1.0.0-Beta12",
     "@datadayrepos/ni": "^0.21.8",
     "@types/node": "20.9.0",
+    "@types/rollup": "^0.54.0",
     "@vitejs/plugin-vue": "4.4.1",
     "eslint": "^8.51.0",
     "eslint-plugin-sort-keys": "^2.3.5",
@@ -36,7 +34,6 @@
     "vite": "4.5.0",
     "vue": "3.3.4",
     "vue-tsc": "1.8.22"
-
   },
   "pnpm": {
     "peerDependencyRules": {
