--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "rootDir": "./src/vue",
     "module": "ESNext",
     /* Bundler mode */
-    "moduleResolution": "Node",
+    "moduleResolution": "Bundler",
     "paths": {
       "@/*": ["src/*"]
     },
